# document_classifier_poc

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/services/: classifier.py
app/utils/: logger.py  openrouter_client.py  pdf_processor.py
constants/: __init__.py  prompts.py
